# autonomous-mower

./: .gitignore  PHASE1_COMPLETION_SUMMARY.md  PROGRESS_STATUS.md  README.md  mower_ws_README.md  test_navigation.py  test_teleop.sh
.github/: copilot-instructions.md
docs/: 3-Agent-Implementation.md  Autonomous Mower Development Plan v2.md  Autonomous Mower Development Plan v3.md  Autonomous Mower Development Plan.md  _prompts.md  implementation-phase 2.md  implementation-phase 3.md  implementation-phase 4.md  implementation-phase1.md  requirements-phase 2.md  requirements-phase 3.md  requirements-phase 4.md
docs/Phase 1/: clock-sync-fix-summary.md  implementation-phase1.md  requirements-phase1.md
docs/Phase 3/: Autonomous Mower Development Plan v2.md  implementation-phase 3.md  requirements-phase 3.md
maps/: readme.md
src/mower_bringup/: package.xml  setup.cfg  setup.py
src/mower_bringup/config/: gz_bridge.yaml
src/mower_bringup/launch/: sim.launch.py  teleop.launch.py
src/mower_bringup/mower_bringup/: simple_teleop.py
src/mower_control/: CMakeLists.txt  package.xml
src/mower_control/config/: mower_controllers.yaml
src/mower_description/: CMakeLists.txt  package.xml
src/mower_description/launch/: display.launch.py
src/mower_description/rviz/: urdf_config.rviz
src/mower_description/urdf/: mower.urdf.xacro  xml.sh
src/mower_description/urdf/components/: chassis.xacro  cutting_system.xacro  materials.xacro  properties.xacro  ros2_control.xacro  sensors.xacro  sensors.xacro.xml  wheels.xacro
src/mower_localization/: package.xml  setup.cfg  setup.py
src/mower_localization/config/: ekf.yaml  ekf_global.yaml  ekf_local.yaml  navsat_transform.yaml
src/mower_localization/mower_localization/: gps_heading_node.py  ground_truth_heading_node.py  map_generator.py  map_to_utm_broadcaster.py  recorder_node.py
src/mower_localization/rviz/: ekf_test.rviz
src/mower_msgs/: CMakeLists.txt  package.xml
src/mower_msgs/msg/: NavStatus.msg
src/mower_msgs/srv/: ManageRecording.srv
src/mower_navigation/: CMakeLists.txt  package.xml
src/mower_navigation/config/: nav2_params.yaml
src/mower_navigation/launch/: navigation.launch.py
src/mower_navigation/scripts/: cmd_vel_stamper.py  map_bounds_guard.py
src/mower_navigation/test/: test_map_bounds_guard.py
src/mower_simulation/: CMakeLists.txt  package.xml
src/mower_simulation/worlds/: lawn (Copy).world  lawn.world
