<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mower_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch files for the autonomous mower system</description>
  <maintainer email="alford.tyler94@gmail.com">tyler</maintainer>
  <license>MIT</license>

  <exec_depend>mower_description</exec_depend>
  <exec_depend>mower_simulation</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

