<?xml version="1.0"?>
<package format="3">
  <name>mower_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 bringup and configuration for the autonomous mower.</description>
  <maintainer email="tyler@example.com">Tyler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
